--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 #
 #url: http://qckanemoto.github.io # or http://you.github.io
 url: http://localhost:4000
-baseurl: /jekyll-qck-theme # or ""
-title: Your name
-description: Some descriptions of yourself.
+baseurl: ""
+title: 北海flash的博客
+description: 进道若退，明道若昧
 avatar: /assets/img/ogp.png
 
 #
@@ -13,10 +13,10 @@ avatar: /assets/img/ogp.png
 #
 icons:
   rss: true
-  email:
-  github: qckanemoto
+  email: huster.zhangpeng@gmail.com
+  github: huster-zhangpeng
   bitbucket:
-  twitter: qckanemoto
+  twitter: 
   facebook:
   google_plus:
   tumblr:
@@ -47,12 +47,12 @@ disqus:
 #
 # Localizations.
 #
-str_next: Next
-str_prev: Prev
-str_read_more: Read more...
-str_search: Search
-str_recent_posts: Recent posts
-str_show_all_posts: Show all posts
+str_next: 下一篇
+str_prev: 上一篇
+str_read_more: 阅读
+str_search: 搜索
+str_recent_posts: 最近
+str_show_all_posts: 所有
 
 #
 # Recent posts.
